2008-07-05  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerinteractor.py.in
	(PokerInteractorTestCase.test_highestBetIncreaseCancelCall): Added
	checks for output.
	(PokerFactoryMockup.getMessages): Wrote method.
	(PokerFactoryMockup.message): Wrote method.
	(PokerFactoryMockup.clearMessages): Wrote method.
	(PokerFactoryMockup.__init__): Added call to clearMessages.
	Increased verbosity.

2008-07-04  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-upgrade.py.in (UpgraderTestCase.test05_getUpgrader):
	Wrote method.
	(UpgraderTestCase.test06_upgradeReady): Wrote method.

2008-06-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-upgrade.py.in (UpgraderTestCase.test03_noNetwork):
	Wrote method.
	(UpgraderTestCase.test01_CheckClientVersionFailed1): Added check
	for output from checkClientVersion()
	(UpgraderTestCase.test04_hostNoRespond): Wrote method.
	(UpgraderMockup.spawn): Wrote method.

	* pokernetwork/upgrade.py (Upgrader.message): Wrote method; as
	support for Upgrader.error

	* pokernetwork/upgrade.py (Upgrader.error): Wrote method; it was missing.

	* tests/test-upgrade.py.in
	(PokerClientUpgradeCheckClientVersion.test01_CheckClientVersionRemote):
	Added check for message() output from CheckClientVersion.__init__
	(PokerClientUpgradeFailedTestCase.test01_CheckClientVersionFailedAndNeedUpgrade):
	Added output checks.
	(DryrunUpgradeMockUp): Created mockup.
	(PokerClientDryrunUpgrade): Created test class.
	(PokerClientDryrunUpgrade.setUp): Wrote method.
	(PokerClientDryrunUpgrade.tearDown): Wrote method.
	(PokerClientDryrunUpgrade.test01_dryRunLineTest): Wrote method.
	(GetPatchMockUp): Created mock up class.
	(GetPatchUpgradeTest): Created test set.
	(GetPatchUpgradeTest.setUp): Wrote method.
	(GetPatchUpgradeTest.tearDown): Wrote method.
	(GetPatchUpgradeTest.test01_getPatchLine): Wrote method.

	* tests/testmessages.py: Added import of upgrade to put
	upgrade.CheckClientVersion on the messages list.
